# KREST_API

./: .gitignore  .gitmodules  ASR_ETRI.h  CMakeLists.txt  KWidgetASR.cmake  KWidgetASR.cpp  KWidgetASR.h  README.md  test.cpp
lib/curl/: libcurl.lib
private/: config.json
